kubernetes/servicemix-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: servicemix
  labels:
    app: servicemix
spec:
  selector:
    matchLabels:
      octopusexport: OctopusExport
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: servicemix
        octopusexport: OctopusExport
    spec:
      volumes:
          - name: deploy-volume
            persistentVolumeClaim:
              claimName: deploy-pv-claim
      containers:
        - name: servicemix
          image: mkroli/servicemix
          ports:
            - name: p6
              containerPort: 44444
            - name: p5
              containerPort: 36888
            - name: p4
              containerPort: 61616
            - name: p3
              containerPort: 8181
            - name: p2
              containerPort: 8101
            - name: p1
              containerPort: 1099
          volumeMounts:
            - name: deploy-volume
              mountPath: /deploy
